page extra space bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@
 }
 .about-img {
   position: absolute;
-  right: 5%;
+  right: 8%;
   top: 52.75rem;
   z-index: -1;
 }
